# CrisStockPortofolio

./: CMakeLists.txt  Main.cpp  README.md  ReadData.cpp  ReadData.h  Transaction.cpp  Transaction.h  Utils.h  Version.h.in
docs/: Design.txt  ThingsToImprove
